--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ networkx==2.5.1
 numpy==1.21.2
 pandas==1.3.5
 pip==21.1.3
+protobuf==3.20.0
 scikit-learn==0.24.2
 scipy==1.7.3
 seaborn==0.11.2
@@ -14,3 +15,4 @@ keras==2.8.0
 tensorflow==2.8.0
 pm4py==2.2.20.1
 shap==0.40.0
+ocpa==1.2
